# video-subtitle-translator

./: .gitignore  LICENSE  README.md  cli.py  engine.py  main.py  player.py  requirements.txt  start-app-dev.bat  start-app.bat  start-app.bsat  video-subtitle-translator.code-workspace
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
docs/: ARCHITECTURE.md  README.md
mcp-server/: package-lock.json  package.json  server.js
scripts/: cleanup-ports.bat  enhance-video.bat  run-api-only.bat  run-api-only.sh  run-desktop-direct.bat  run-desktop-release.bat  run-desktop-release.sh  run-desktop.bat  run-desktop.sh  run-dev.bat  run-dev.sh  run-docker.bat  run-docker.sh  run-frontend-only.bat  run-frontend-only.sh  run-mcp.bat  run-mcp.sh  run-web-lite.bat  run.bat  run.sh  stop-all.bat  stop-all.sh
src/Backend/: VideoSubtitleTranslator.sln
src/Backend/VideoSubtitleTranslator.Api/: Program.cs  VideoSubtitleTranslator.Api.csproj  VideoSubtitleTranslator.Api.http  appsettings.json
src/Backend/VideoSubtitleTranslator.Core/: Class1.cs
src/Backend/VideoSubtitleTranslator.Infrastructure/: Class1.cs  VideoSubtitleTranslator.Infrastructure.csproj
src/Backend/VideoSubtitleTranslator.Tests/: FFmpegProcessTests.cs  SrtGeneratorTests.cs  SubtitleLanguagePlannerTests.cs  (+2 more)
src/Desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/Desktop/src-tauri/capabilities/: default.json
src/Desktop/src-tauri/icons/: icon.icns
src/Desktop/src-tauri/src/: commands.rs  main.rs
src/Frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+68 files in other folders)
