[package]
name = "video-subtitle-translator"
version = "1.0.0"
description = "Video Subtitle Translator Desktop App"
authors = ["Video Subtitle Translator Team"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
